<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/local_notifications_with_work"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/add_your_title_here"
                app:layout_constraintEnd_toEndOf="@+id/titleTextView"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/messageInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_your_message_here"
                app:layout_constraintEnd_toEndOf="@+id/titleInputLayout"
                app:layout_constraintStart_toStartOf="@+id/titleInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/titleInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="200"
                    android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="22dp"
                android:prompt="@string/select_an_item"
                app:layout_constraintEnd_toEndOf="@+id/messageInputLayout"
                app:layout_constraintStart_toStartOf="@+id/messageInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/messageInputLayout" />

            <Button
                android:id="@+id/launchButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/launch_local_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>